--- a/DOMexercise6.html
+++ b/DOMexercise6.html
@@ -4,15 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>color</title>
+    <title>Pixel Painter</title>
+    <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./DOMexercise6.css">
 </head>
 <body>
-    
+    <h1>Pixel Painter</h1>
+<main>
+<div class="brush">
     <button class="red" onclick="red()">red</button>
     <button class="blue" onclick="blue()">blue</button>
     <button class="green" onclick="green()">green</button>
-
+</div>
     <div class="container">
         <div class="square" id="test"></div>
         <div class="square"></div>
@@ -79,6 +82,7 @@
         <div class="square"></div>
         <div class="square"></div>
     </div>
-    <script src=".DOMexercise6.js"></script>
+</main>
+    <script src="./DOMexercise6.js"></script>
 </body>
 </html>
