--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Pixel Painter</title>
     <link href="https://fonts.googleapis.com/css?family=Dancing+Script&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./DOMexercise6.css">
+    <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
     <h1>Pixel Painter</h1>
@@ -83,6 +83,6 @@
         <div class="square"></div>
     </div>
 </main>
-    <script src="./DOMexercise6.js"></script>
+    <script src="./scripts.js"></script>
 </body>
 </html>
